[package]
name = "rendy_playground"
version = "0.1.0"
authors = ["sim82 <simberger@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vulkan = []

[dependencies]
bincode = "*"
clap = "*"
env_logger = "*"
failure = "0.1"
genmesh = "*"
gfx-backend-vulkan = {version = "0.4", features = ["x11"]}
image = "*"
itertools = "*"
lazy_static = "*"
log = "*"
nalgebra = "*"
ndarray = "*"
num-traits = "*"
# packed_simd = "*"
palette = "*"
rand = "0.6"
random_color = "*"
rayon = "*"
rendy = { version ="0.5", features = ["vulkan"]}
rendy-shader = "0.5"
rendy-texture = { version="0.5", features = ["image"]}
rendy-wsi = "0.5"
rendy-init = { version = "0.5", features = ["winit"]}
rendy-core = { version = "*", features = ["vulkan"]}
serde = "*"
serde_derive = "*"
serde_json = "*"
winit = "0.20.0-alpha4"

